# unstruct

./: Cargo.toml  LICENSE.md  README.md  TODO.md  result.txt  unstruct.ini  unstruct.parser
.github/workflows/: build.yml  release.yml  rust.yml
data/: sgw1_20220506_0001.xml  sgw1_20220506_0002.xml  sgw1_20220506_0003.xml  sgw1_20220506_0004.xml  sgw1_20220506_0005.xml
example_bag/: 0106PND15112021-000001.xml  bag.parser  result.txt
example_cdr/: result.txt  sgw1_20220506_0001.xml  sgw1_20220506_0002.xml  sgw1_20220506_0003.xml  sgw1_20220506_0004.xml
example_ftp/: ftp.parser  result.txt  sync.xml
example_sts/: result.txt  statistics.xml  statistics_1.xml  statistics_2.xml  sts.parser
src/: config.rs  main.rs  parser.pest
