[package]
name = "unstruct"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.14.1"
clap = { version = "3.2", features = ["derive"] }
glob = "0.3.0"
pest = "2.1.3"
pest_derive = "2.1.0"
